proxmox-k3s/ansible/files/prometheus-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: prometheus
      meta.helm.sh/release-namespace: monitoring
    labels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: prometheus
      app.kubernetes.io/version: v2.51.1
      helm.sh/chart: prometheus-25.19.1
    name: prometheus-server
    namespace: monitoring
  spec:
    ingressClassName: traefik
    rules:
    - host: prometheus.site1.thebrownleefamily.net
      http:
        paths:
        - backend:
            service:
              name: prometheus-server
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: alertmanager.site1.thebrownleefamily.net
      http:
        paths:
        - backend:
            service:
              name: prometheus-alertmanager
              port:
                number: 9093
          path: /
          pathType: Prefix
kind: List
metadata:
  resourceVersion: ""
